--- a/notebook/MNIST.ipynb
+++ b/notebook/MNIST.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 73,
    "id": "2410bd0f",
    "metadata": {},
    "outputs": [
@@ -229,7 +229,7 @@
        "[5 rows x 785 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 74,
    "id": "ad7b69ff",
    "metadata": {},
    "outputs": [],
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 75,
    "id": "21e1a61a",
    "metadata": {},
    "outputs": [
@@ -263,7 +263,7 @@
        "((42000, 784), (42000,))"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,15 +274,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "5e366f6c",
+   "execution_count": 83,
+   "id": "5002817f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.960952380952381\n"
+      "Accuracy =  0.9626984126984127\n"
      ]
     }
    ],
@@ -300,11 +300,11 @@
     "model = Pipeline(steps=[(\"scaler\",StandardScaler()), \n",
     "                        (\"rand forest\", RandomForestClassifier())])\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X,y, test_size=0.3)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X,y, test_size=0.3, random_state=42)\n",
     "\n",
     "model.fit(X_train, y_train)\n",
     "yhat = model.predict(X_test)\n",
-    "print(accuracy_score(y_test, yhat))\n"
+    "print(\"Accuracy = \",accuracy_score(y_test, yhat))\n"
    ]
   },
   {
@@ -387,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "6fb6467d",
+   "id": "bf4c5b9b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "6844de18",
+   "id": "f235c3bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "323b90da",
+   "id": "855c0d29",
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "5df013cb",
+   "id": "688b5362",
    "metadata": {},
    "outputs": [
     {
@@ -450,8 +450,187 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 60,
+   "id": "91ac0665",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pixel0</th>\n",
+       "      <th>pixel1</th>\n",
+       "      <th>pixel2</th>\n",
+       "      <th>pixel3</th>\n",
+       "      <th>pixel4</th>\n",
+       "      <th>pixel5</th>\n",
+       "      <th>pixel6</th>\n",
+       "      <th>pixel7</th>\n",
+       "      <th>pixel8</th>\n",
+       "      <th>pixel9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>pixel774</th>\n",
+       "      <th>pixel775</th>\n",
+       "      <th>pixel776</th>\n",
+       "      <th>pixel777</th>\n",
+       "      <th>pixel778</th>\n",
+       "      <th>pixel779</th>\n",
+       "      <th>pixel780</th>\n",
+       "      <th>pixel781</th>\n",
+       "      <th>pixel782</th>\n",
+       "      <th>pixel783</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3 rows × 784 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   pixel0  pixel1  pixel2  pixel3  pixel4  pixel5  pixel6  pixel7  pixel8  \\\n",
+       "0       0       0       0       0       0       0       0       0       0   \n",
+       "1       0       0       0       0       0       0       0       0       0   \n",
+       "2       0       0       0       0       0       0       0       0       0   \n",
+       "\n",
+       "   pixel9  ...  pixel774  pixel775  pixel776  pixel777  pixel778  pixel779  \\\n",
+       "0       0  ...         0         0         0         0         0         0   \n",
+       "1       0  ...         0         0         0         0         0         0   \n",
+       "2       0  ...         0         0         0         0         0         0   \n",
+       "\n",
+       "   pixel780  pixel781  pixel782  pixel783  \n",
+       "0         0         0         0         0  \n",
+       "1         0         0         0         0  \n",
+       "2         0         0         0         0  \n",
+       "\n",
+       "[3 rows x 784 columns]"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "file_test_path = get_file_path(\"test.csv\", \"original data\")\n",
+    "df_test = pd.read_csv(file_test_path)\n",
+    "df_test.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "164770f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imageid = [i for i in range(1,df_test.shape[0]+1)]\n",
+    "X_test_sub = df_test.values\n",
+    "yhat_sub = model.predict(X_test_sub)\n",
+    "\n",
+    "dic_sub={\n",
+    "    \"ImageId\":imageid,\n",
+    "    \"Label\":yhat_sub\n",
+    "}\n",
+    "\n",
+    "df_submission = pd.DataFrame(dic_sub)\n",
+    "submission_path = os.path.join(get_file_path(\"\", \"submissions\"),\"rand_forest_sub.csv\")\n",
+    "df_submission.to_csv(submission_path, index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "c99c2bdb",
+   "id": "969ee2c3",
    "metadata": {},
    "outputs": [],
    "source": []
