dimensionality reduction perfomed

--- a/notebook/MNIST.ipynb
+++ b/notebook/MNIST.ipynb
@@ -389,9 +389,9 @@
    "metadata": {},
    "source": [
     "## Modeling\n",
-    "I will know build a Pipeline with the data preparation steps.\n",
+    "I will now build a Pipeline with the data preparation steps.\n",
     "\n",
-    "Three algorithms are going to be used: SVC, LogisticRegression and RandomForestClassifier. \n",
+    "Three algorithms are going to be used: KNN, LogisticRegression and RandomForestClassifier. \n",
     "They'll be validated using k-fold cross validation."
    ]
   },
@@ -537,8 +537,6 @@
     }
    ],
    "source": [
-    "from sklearn.ensemble import VotingClassifier\n",
-    "\n",
     "voting_clf_hard = VotingClassifier(\n",
     "estimators=[('SVC', pipeline_knn), \n",
     "('LogisticRegression', pipeline_lr), \n",
