markdowns added to the nb

--- a/notebook/MNIST.ipynb
+++ b/notebook/MNIST.ipynb
@@ -7,8 +7,8 @@
    "source": [
     "# MNIST - Introduction\n",
     "\n",
-    "The MNIST is a large handwritten digit dataset commonly used to train various image processing systems. In this project I apply a few techniques to train a eficient machine learnin model to create a submission for [kaggle competition](https://www.kaggle.com/competitions/digit-recognizer).\n",
-    "The objective is to perform few techniques and algorithms such as PCA for dimensionality reduction and an ensemble classification algorithm. I will also try some digits that I handwrote myself in the final model.\n",
+    "The MNIST is a large handwritten digit dataset commonly used to train various image processing systems. In this project I apply a few techniques to train a eficient machine learnin model, the goal is to apply techniques of dimensionality reduction and Bayesian Optimization for quicker hyperparameter tuning.\n",
+    "\n",
     "___"
    ]
   },
@@ -342,7 +342,7 @@
    "metadata": {},
    "source": [
     "Each feature of the dataset is a pixel, and there are 60000 instances.\n",
-    "Since they are images it is possible to visualize them. Let's see some exemples:"
+    "Since they are images it is possible to visualize them. Let's see a exemple:"
    ]
   },
   {
@@ -460,6 +460,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "adc539ca",
+   "metadata": {},
+   "source": [
+    "First, let's train a baseline model to see how much we can improve the accuracy"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 276,
    "id": "7b788f67",
@@ -479,6 +487,14 @@
     "model.fit(X, y)\n",
     "yhat = model.predict(X_test)\n",
     "print(\"Accuracy = \",accuracy_score(y_test, yhat))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4a058a8",
+   "metadata": {},
+   "source": [
+    "Now let's define the functions that are going to be used for hyper parameter tuning with Hyperopt:"
    ]
   },
   {
@@ -524,12 +540,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Data preparation PipeLine\n",
     "prep_pipe = Pipeline(steps = [\n",
     "    (\"scaler\", StandardScaler()),\n",
     "    (\"pca\", PCA(n_components=0.95, random_state=42))\n",
     "    ]\n",
     ")\n",
     "X_prep = prep_pipe.fit_transform(X)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7aae4ff4",
+   "metadata": {},
+   "source": [
+    "Finally, we define the space of hyper parameters and start the optmization. \n",
+    "Three algorithms will be used:\n",
+    " - RandomForestClassifier\n",
+    " - KNeighborsClassifier\n",
+    " - SVC"
    ]
   },
   {
@@ -721,6 +750,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "77976fd0",
+   "metadata": {},
+   "source": [
+    "Now we train the models using the best hyper parameters and test them with the test data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 265,
    "id": "7d8e8c05",
@@ -793,6 +830,16 @@
     "yhat = svc_model.predict(X_test_prep)\n",
     "a = accuracy_score(y_test, yhat)\n",
     "print(\"SVC, accuracy:\", a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ae53e3e",
+   "metadata": {},
+   "source": [
+    "Great, we improved the acurracy using techniques to speed up the hole process of modeling.\n",
+    "\n",
+    "That's it for now!"
    ]
   }
  ],
