add readme and changing the last nb markdown

--- a/notebook/MNIST.ipynb
+++ b/notebook/MNIST.ipynb
@@ -837,10 +837,16 @@
    "id": "6ae53e3e",
    "metadata": {},
    "source": [
-    "Great, we improved the acurracy using techniques to speed up the hole process of modeling.\n",
+    "Great! We improved the acurracy using techniques to speed up the hole process of modeling. The next steps would be trying different algorithms and transformations.\n",
     "\n",
     "That's it for now!"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13b25f89",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
